# vibe-browser

./: PLANNING_AND_PROGRESS.md  README.md  index.html  package-full.json  package-simple.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml  release.yml
public/: VIBE.md
src/: App-Full.tsx  App-Simple.tsx  App-Working.tsx  App.css  App.tsx
src-tauri/: Cargo.toml  VIBE-PROTOCOL-SPEC.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs  streaming.rs
src-tauri/src/ai/pocketflow/: generator_node.rs  mod.rs  requirements_node.rs  validation_node.rs
src-tauri/src/ai/providers/: mod.rs  openrouter.rs  vertex.rs
src-tauri/src/commands/: ai_commands.rs  grid_commands.rs  mod.rs  vibe_commands.rs
src-tauri/src/storage/: cache.rs  config.rs  mod.rs
src/components/: DynaGridOverlay.tsx  SearchInput-Simple.tsx  SearchInput.tsx  SearchOverlay-Simple.tsx  SearchOverlay.tsx
src/services/: aiService.ts
src/stores/: searchStore-Simple.ts  searchStore.ts  streamingStore.ts
